--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ dependencies = [
     "aiohttp>=3.9.0",
     "requests>=2.31.0",
     "certifi>=2024.0.0",
+    # Financial data
+    "yfinance>=0.2.0",
     # Environment & Config
     "python-dotenv>=1.0.0",
     # Async
