--- a/data_fetch/config.json
+++ b/data_fetch/config.json
@@ -16,7 +16,7 @@
   
   "dates": {
     "start_date": "2020-10-01",
-    "end_date": "2025-12-10",
+    "end_date": null,
     "train_end_date": "2024-01-01",
     "val_end_date": "2024-07-01"
   },
