--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,6 +77,11 @@ explicit = true
 [tool.uv.sources]
 torch = { index = "pytorch-cu128" }
 
+[tool.uv.workspace]
+members = [
+    "live_trading",
+]
+
 [tool.ruff]
 line-length = 100
 target-version = "py311"
